# foundry

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  EVALUATION.md  LICENSE  Makefile  README.md  TROUBLESHOOTING.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  lint.yml
base/llama-cpp/: Dockerfile  healthcheck.sh
deploy/: Dockerfile.runpod  RUNPOD.md  health_check.py  runpod-start.sh  runpod-template.yaml
models/hermes-4.3-36b/: Dockerfile  entrypoint.sh
models/hermes-4.3-36b/profiles/: default.sh  rtx5090.sh
models/qwen3-coder-30b-a3b/: Dockerfile
models/qwen3-coder-30b-a3b/profiles/: default.sh  rtx5090.sh
models/qwen3.5-35b-a3b/: Dockerfile  entrypoint.sh
models/qwen3.5-35b-a3b/profiles/: a100-80g.sh  default.sh  h100.sh  rtx3090.sh  rtx4080.sh  rtx4090.sh  rtx5080.sh  rtx5090.sh
models/qwen3.5-9b/: Dockerfile  entrypoint.sh
models/qwen3.5-9b/profiles/: default.sh  rtx5090.sh
models/qwen3.6-35b-a3b-nvfp4/: Dockerfile  entrypoint.sh
models/qwen3.6-35b-a3b-nvfp4/profiles/: default.sh  rtx5090.sh
monitoring/grafana/dashboards/: cadvisor.json  foundry-inference.json  node-exporter.json  nvidia-gpu.json
monitoring/prometheus/: prometheus.yml
scripts/: benchmark.py  build.sh  download-model.sh  host-setup.sh  optimize_5090.py  run.sh
scripts/eval/: run-aider.sh  run-evalplus.sh  run-swebench.sh
skills/foundry-assess/: SKILL.md
skills/foundry-benchmark/: SKILL.md
skills/foundry-serve/: SKILL.md
