[project]
name = "foundry"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
# E/F/W = pycodestyle + pyflakes (basic correctness)
# I     = isort (import ordering)
# UP    = pyupgrade (modernize syntax)
# B     = bugbear (common pitfalls)
# SIM   = simplify (unnecessary complexity)
